--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./ressources/css/reset.css">
@@ -7,6 +7,180 @@
     <title>Colmar Academy</title>
   </head>
   <body>
+
+    <!-- HEADER -->
+    <header>
+
+      <div id="logo">
+        <img src="./ressources/images/ic-logo.svg" alt="logo">
+        <span><strong>Colmar</strong>Academy</span>
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="#">On campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For companies</a></li>
+          <li><a href="#">Sign in</a></li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <!-- MAIN -->
+
+    <div class="main">
+
+      <div class="container">
+        <img src="./ressources/images/banner.jpg" alt="banner">
+        <h1>Learn something new everyday</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <a href="button">Start here</a>
+      </div>
+
+      <!--  -->
+
+      <div class="container">
+
+        <div class="quote">
+          <h2>It doesn't hurt to keep practicing</h2>
+          <q cite="Emmanuel, Sr Strategist at Hiring.com">
+            Curabitur vitae libero in ipsum prttitor consequat.
+            Aliquam et commodo lectus, nec consequat neque.
+            Sed non accumsan urna.
+            Phasellus sed consequat ex. Etiam eget magna laoreet,
+            efficitur dolor consequat, tristique ligula.
+          </q>
+        </div>
+
+        <div class="articles">
+          <div id="1" class="article">
+            <div class="illustration"></div>
+            <h3>Orientation date</h3>
+            <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
+            <a href="#">Read more</a>
+          </div>
+
+          <div id="2" class="article">
+            <div class="illustration"></div>
+            <h3>Our campus</h3>
+            <span>Find which campus is close by you</span>
+            <a href="#">Read more</a>
+          </div>
+
+          <div id="3" class="article">
+            <div class="illustration"></div>
+            <h3>Our guest lecture</h3>
+            <span>
+              Join a keynote with Oliver Sack about music in medical treatment
+            </span>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- -->
+
+      <div class="container">
+
+        <h2>Start learning</h2>
+
+        <div class="course">
+          <img src="./ressources/images/course-software.jpg" alt="software">
+          <h3>Software engineering</h3>
+          <h4 class="type">Courses</h4>
+          <span>Web Development, Mobile Development, iOT, APIs</span>
+        </div>
+
+        <div class="course">
+          <img src="./ressources/images/course-computer-art.jpg" alt="computer art">
+          <h3>Computer art</h3>
+          <h4 class="type">Courses</h4>
+          <span>
+            Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+            Computer Animation
+          </span>
+        </div>
+
+        <div class="course">
+          <img src="./ressources/images/course-design.jpg" alt="design">
+          <h3>Design</h3>
+          <h4 class="type">Courses</h4>
+          <span>User Experience Design, User Research, Visual Design</span>
+        </div>
+
+        <div class="course">
+          <img src="./ressources/images/course-date.jpg" alt="data">
+          <h3>Data</h3>
+          <h4 class="type">Courses</h4>
+          <span>Data Science, Big Data, SQL, Data Visualization</span>
+        </div>
+
+        <div class="course">
+          <img src="./ressources/images/course-business.jpg" alt="business">
+          <h3>Business</h3>
+          <h4 class="type">Courses</h4>
+          <span>Product Development, Business Development, Startup</span>
+        </div>
+
+        <div class="course">
+          <img src="./ressources/images/course-marketing" alt="marketing">
+          <h3>Marketing</h3>
+          <h4 class="type">Courses</h4>
+          <span>Analytics, Content Marketing, Mobile Marketing</span>
+        </div>
+
+      </div>
+
+      <!-- -->
+
+      <div class="container">
+
+        <h2>Thesis exhibit</h2>
+
+        <div class="">
+          <video src="./ressources/videos/thesis.mp4"></video>
+          <h3>Reimagine urban</h3>
+          <q>
+            Curabitur vitae libero in ipsum prttitor consequat.
+            Aliquam et commodo lectus, nec consequat neque.
+            Sed non accumsan urna.
+            Phasellus sed consequat ex. Etiam eget magna laoreet,
+            efficitur dolor consequat, tristique ligula.
+          </q>
+        </div>
+
+        <div class="articles">
+          <div id="4" class="article">
+            <div class="illustration"></div>
+            <h3>Fisma: Design and</h3>
+            <span>Designer showcase of new prototype product</span>
+          </div>
+
+          <div id="5" class="article">
+            <div class="illustration"></div>
+            <h3>Now and then</h3>
+            <span>Research study about New York</span>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- FOOTER -->
+
+    <footer>
+
+      <span>&copy; 2016 Colmar Academy. All rights reserved</span>
+
+      <ul>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+      </ul>
+
+    </footer>
 
   </body>
 </html>
