--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./ressources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./ressources/css/style.css">
     <title>Colmar Academy</title>
@@ -31,50 +32,61 @@
 
     <div class="main">
 
-      <div class="container">
-        <img src="./ressources/images/banner.jpg" alt="banner">
-        <h1>Learn something new everyday</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a href="button">Start here</a>
+      <div class="container content">
+        <img id="banner" src="./ressources/images/banner.jpg" alt="banner">
+        <div class="learn">
+          <h1>Learn something new everyday</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <a class="button" href="#">Start here</a>
+        </div>
+
       </div>
 
       <!--  -->
 
-      <div class="container">
+      <div class="container content">
 
-        <div class="quote">
-          <h2>It doesn't hurt to keep practicing</h2>
-          <q cite="Emmanuel, Sr Strategist at Hiring.com">
+        <div class="information">
+          <img src="./ressources/images/information-main.jpg" alt="information">
+          <h3>It doesn't hurt to keep practicing</h3>
+          <q>
             Curabitur vitae libero in ipsum prttitor consequat.
             Aliquam et commodo lectus, nec consequat neque.
             Sed non accumsan urna.
             Phasellus sed consequat ex. Etiam eget magna laoreet,
             efficitur dolor consequat, tristique ligula.
           </q>
+          <cite>Emmanuel, Sr Strategist at Hiring.com</cite>
         </div>
 
         <div class="articles">
-          <div id="1" class="article">
-            <div class="illustration"></div>
-            <h3>Orientation date</h3>
-            <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
-            <a href="#">Read more</a>
+          <div class="article">
+            <img src="./ressources/images/information-orientation.jpg" alt="orientation">
+            <div class="test">
+              <h4>Orientation date</h4>
+              <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+              <a href="#">Read more</a>
+            </div>
           </div>
 
-          <div id="2" class="article">
-            <div class="illustration"></div>
-            <h3>Our campus</h3>
-            <span>Find which campus is close by you</span>
-            <a href="#">Read more</a>
+          <div class="article">
+            <img src="./ressources/images/information-campus.jpg" alt="campus">
+            <div>
+              <h4>Our campus</h4>
+              <p>Find which campus is close by you</p>
+              <a href="#">Read more</a>
+            </div>
           </div>
 
-          <div id="3" class="article">
-            <div class="illustration"></div>
-            <h3>Our guest lecture</h3>
-            <span>
-              Join a keynote with Oliver Sack about music in medical treatment
-            </span>
-            <a href="#">Read more</a>
+          <div class="article">
+            <img src="./ressources/images/information-guest-lecture.jpg" alt="guest">
+            <div>
+              <h4>Our guest lecture</h4>
+              <p>
+                Join a keynote with Oliver Sack about music in medical treatment
+              </p>
+              <a href="#">Read more</a>
+            </div>
           </div>
         </div>
 
@@ -86,49 +98,63 @@
 
         <h2>Start learning</h2>
 
-        <div class="course">
-          <img src="./ressources/images/course-software.jpg" alt="software">
-          <h3>Software engineering</h3>
-          <h4 class="type">Courses</h4>
-          <span>Web Development, Mobile Development, iOT, APIs</span>
-        </div>
+        <div class="courses">
+          <div class="course">
+            <img src="./ressources/images/course-software.jpg" alt="software">
+            <div class="description">
+              <h4>Software engineering</h4>
+              <h5>Courses</h5>
+              <span>Web Development, Mobile Development, iOT, APIs</span>
+            </div>
+          </div>
 
-        <div class="course">
-          <img src="./ressources/images/course-computer-art.jpg" alt="computer art">
-          <h3>Computer art</h3>
-          <h4 class="type">Courses</h4>
-          <span>
-            Imaging & Design, Web Design, Motion Graphics & Visual Effects,
-            Computer Animation
-          </span>
-        </div>
+          <div class="course">
+            <img src="./ressources/images/course-computer-art.jpg" alt="computer art">
+            <div class="description">
+              <h4>Computer art</h4>
+              <h5>Courses</h5>
+              <span>
+                Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+                Computer Animation
+              </span>
+            </div>
+          </div>
 
-        <div class="course">
-          <img src="./ressources/images/course-design.jpg" alt="design">
-          <h3>Design</h3>
-          <h4 class="type">Courses</h4>
-          <span>User Experience Design, User Research, Visual Design</span>
-        </div>
+          <div class="course">
+            <img src="./ressources/images/course-design.jpg" alt="design">
+            <div class="description">
+              <h4>Design</h4>
+              <h5>Courses</h5>
+              <span>User Experience Design, User Research, Visual Design</span>
+            </div>
+          </div>
 
-        <div class="course">
-          <img src="./ressources/images/course-date.jpg" alt="data">
-          <h3>Data</h3>
-          <h4 class="type">Courses</h4>
-          <span>Data Science, Big Data, SQL, Data Visualization</span>
-        </div>
+          <div class="course">
+            <img src="./ressources/images/course-data.jpg" alt="data">
+            <div class="description">
+              <h4>Data</h4>
+              <h5>Courses</h5>
+              <span>Data Science, Big Data, SQL, Data Visualization</span>
+            </div>
+          </div>
 
-        <div class="course">
-          <img src="./ressources/images/course-business.jpg" alt="business">
-          <h3>Business</h3>
-          <h4 class="type">Courses</h4>
-          <span>Product Development, Business Development, Startup</span>
-        </div>
+          <div class="course">
+            <img src="./ressources/images/course-business.jpg" alt="business">
+            <div class="description">
+              <h4>Business</h4>
+              <h5>COURSES</h5>
+              <span class="keywords">Product Development, Business Development, Startup</span>
+            </div>
+          </div>
 
-        <div class="course">
-          <img src="./ressources/images/course-marketing" alt="marketing">
-          <h3>Marketing</h3>
-          <h4 class="type">Courses</h4>
-          <span>Analytics, Content Marketing, Mobile Marketing</span>
+          <div class="course">
+            <img src="./ressources/images/course-marketing.jpg" alt="marketing">
+            <div class="description">
+              <h4>Marketing</h4>
+              <h5>Courses</h5>
+              <span>Analytics, Content Marketing, Mobile Marketing</span>
+            </div>
+          </div>
         </div>
 
       </div>
@@ -139,31 +165,41 @@
 
         <h2>Thesis exhibit</h2>
 
-        <div class="">
-          <video src="./ressources/videos/thesis.mp4"></video>
-          <h3>Reimagine urban</h3>
-          <q>
-            Curabitur vitae libero in ipsum prttitor consequat.
-            Aliquam et commodo lectus, nec consequat neque.
-            Sed non accumsan urna.
-            Phasellus sed consequat ex. Etiam eget magna laoreet,
-            efficitur dolor consequat, tristique ligula.
-          </q>
-        </div>
+        <div class="content">
 
-        <div class="articles">
-          <div id="4" class="article">
-            <div class="illustration"></div>
-            <h3>Fisma: Design and</h3>
-            <span>Designer showcase of new prototype product</span>
+          <div class="information">
+            <video src="./ressources/videos/thesis.mp4" autoplay loop></video>
+            <h3>Reimagine urban</h3>
+            <q>
+              Curabitur vitae libero in ipsum prttitor consequat.
+              Aliquam et commodo lectus, nec consequat neque.
+              Sed non accumsan urna.
+              Phasellus sed consequat ex. Etiam eget magna laoreet,
+              efficitur dolor consequat, tristique ligula.
+            </q>
           </div>
 
-          <div id="5" class="article">
-            <div class="illustration"></div>
-            <h3>Now and then</h3>
-            <span>Research study about New York</span>
+          <div class="articles">
+            <div class="article">
+              <img src="./ressources/images/thesis-fisma.jpg" alt="">
+              <div>
+                <h4>Fisma: Design and</h4>
+                <span>Designer showcase of new prototype product</span>
+              </div>
+            </div>
+
+            <div class="article">
+              <img src="./ressources/images/thesis-now-and-then.jpg" alt="">
+              <div>
+                <h4>Now and then</h4>
+                <span>Research study about New York</span>
+              </div>
+            </div>
           </div>
+
         </div>
+
+
 
       </div>
 
